Fix: Position of completion icons and spacer when editing and action menu overlapping navbar.

--- a/less/moodle-fixes/icons.less
+++ b/less/moodle-fixes/icons.less
@@ -14,11 +14,15 @@
     margin: 0;
     padding: 0;
     box-sizing: content-box;
-    margin-right: 0.5rem;
 
     &.spacer {
         margin-right: 0;
     }
+}
+
+// For filler icon when editing and toggle completion.
+.section .filler {
+    margin-left: 0.5rem;
 }
 
 a:first-of-type > .icon,
